// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ PublicReportCard ]] renders PublicReportCard with all prop options: {"views":0,"hasEditAccess":false,"isRestricted":false} 1`] = `
"<a class=\\"group block rounded-lg border border-slate-400 bg-ink-400 hover:bg-ink-300\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">
  <!---->
  <div class=\\"flex w-full flex-1 flex-wrap\\">
    <div class=\\"space-y-1 border-slate-400 text-sm text-vanilla-400 p-3\\">
      <div class=\\"flex items-center space-x-2 text-base font-semibold text-vanilla-200\\"><span class=\\"mb-2 flex items-center gap-x-2 text-sm font-semibold\\"><zicon-stub color=\\"vanilla-400\\" size=\\"x-small\\" icon=\\"file-bar-chart\\"></zicon-stub> <span>Sample report</span></span></div>
      <p class=\\"flex items-center gap-x-4 text-sm\\">
        <metadataitem-stub icon=\\"eye\\">
          0 views
        </metadataitem-stub>
        <metadataitem-stub icon=\\"clock\\">
          Created on Aug 8, 2022
        </metadataitem-stub>
      </p>
    </div>
    <!---->
  </div>
</a>"
`;

exports[`[[ PublicReportCard ]] renders PublicReportCard with all prop options: {"views":0,"hasEditAccess":false,"isRestricted":true} 1`] = `
"<a class=\\"group block rounded-lg border border-slate-400 bg-ink-400 hover:bg-ink-300\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">
  <!---->
  <div class=\\"flex w-full flex-1 flex-wrap\\">
    <div class=\\"space-y-1 border-slate-400 text-sm text-vanilla-400 p-3\\">
      <div class=\\"flex items-center space-x-2 text-base font-semibold text-vanilla-200\\"><span class=\\"mb-2 flex items-center gap-x-2 text-sm font-semibold\\"><zicon-stub color=\\"vanilla-400\\" size=\\"x-small\\" icon=\\"file-lock\\"></zicon-stub> <span>Sample report</span></span></div>
      <p class=\\"flex items-center gap-x-4 text-sm\\">
        <metadataitem-stub icon=\\"eye\\">
          0 views
        </metadataitem-stub>
        <metadataitem-stub icon=\\"clock\\">
          Created on Aug 8, 2022
        </metadataitem-stub>
      </p>
    </div>
    <!---->
  </div>
</a>"
`;

exports[`[[ PublicReportCard ]] renders PublicReportCard with all prop options: {"views":0,"hasEditAccess":true,"isRestricted":false} 1`] = `
"<a class=\\"group block rounded-lg border border-slate-400 bg-ink-400 hover:bg-ink-300\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">
  <!---->
  <div class=\\"flex w-full flex-1 flex-wrap\\">
    <div class=\\"space-y-1 border-slate-400 text-sm text-vanilla-400 w-full md:w-4/5 p-3\\">
      <div class=\\"flex items-center space-x-2 text-base font-semibold text-vanilla-200\\"><span class=\\"mb-2 flex items-center gap-x-2 text-sm font-semibold\\"><zicon-stub color=\\"vanilla-400\\" size=\\"x-small\\" icon=\\"file-bar-chart\\"></zicon-stub> <span>Sample report</span></span></div>
      <p class=\\"flex items-center gap-x-4 text-sm\\">
        <metadataitem-stub icon=\\"eye\\">
          0 views
        </metadataitem-stub>
        <metadataitem-stub icon=\\"clock\\">
          Created on Aug 8, 2022
        </metadataitem-stub>
      </p>
    </div>
    <div class=\\"hidden w-full md:block md:w-1/5 border-slate-400 group-hover:border-slate-400 sm:border-l\\">
      <div class=\\"flex h-full items-center justify-around\\">
        <zbutton-stub icon=\\"edit\\" button-type=\\"ghost\\" icon-color=\\"vanilla-400 opacity-75\\" size=\\"small\\" class=\\"v-popper--has-tooltip\\"></zbutton-stub>
        <zbutton-stub icon=\\"trash-2\\" button-type=\\"ghost\\" icon-color=\\"cherry opacity-75\\" size=\\"small\\" class=\\"v-popper--has-tooltip\\"></zbutton-stub>
      </div>
    </div>
  </div>
</a>"
`;

exports[`[[ PublicReportCard ]] renders PublicReportCard with all prop options: {"views":0,"hasEditAccess":true,"isRestricted":true} 1`] = `
"<a class=\\"group block rounded-lg border border-slate-400 bg-ink-400 hover:bg-ink-300\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">
  <!---->
  <div class=\\"flex w-full flex-1 flex-wrap\\">
    <div class=\\"space-y-1 border-slate-400 text-sm text-vanilla-400 w-full md:w-4/5 p-3\\">
      <div class=\\"flex items-center space-x-2 text-base font-semibold text-vanilla-200\\"><span class=\\"mb-2 flex items-center gap-x-2 text-sm font-semibold\\"><zicon-stub color=\\"vanilla-400\\" size=\\"x-small\\" icon=\\"file-lock\\"></zicon-stub> <span>Sample report</span></span></div>
      <p class=\\"flex items-center gap-x-4 text-sm\\">
        <metadataitem-stub icon=\\"eye\\">
          0 views
        </metadataitem-stub>
        <metadataitem-stub icon=\\"clock\\">
          Created on Aug 8, 2022
        </metadataitem-stub>
      </p>
    </div>
    <div class=\\"hidden w-full md:block md:w-1/5 border-slate-400 group-hover:border-slate-400 sm:border-l\\">
      <div class=\\"flex h-full items-center justify-around\\">
        <zbutton-stub icon=\\"edit\\" button-type=\\"ghost\\" icon-color=\\"vanilla-400 opacity-75\\" size=\\"small\\" class=\\"v-popper--has-tooltip\\"></zbutton-stub>
        <zbutton-stub icon=\\"trash-2\\" button-type=\\"ghost\\" icon-color=\\"cherry opacity-75\\" size=\\"small\\" class=\\"v-popper--has-tooltip\\"></zbutton-stub>
      </div>
    </div>
  </div>
</a>"
`;

exports[`[[ PublicReportCard ]] renders PublicReportCard with all prop options: {"views":1,"hasEditAccess":false,"isRestricted":false} 1`] = `
"<a class=\\"group block rounded-lg border border-slate-400 bg-ink-400 hover:bg-ink-300\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">
  <!---->
  <div class=\\"flex w-full flex-1 flex-wrap\\">
    <div class=\\"space-y-1 border-slate-400 text-sm text-vanilla-400 p-3\\">
      <div class=\\"flex items-center space-x-2 text-base font-semibold text-vanilla-200\\"><span class=\\"mb-2 flex items-center gap-x-2 text-sm font-semibold\\"><zicon-stub color=\\"vanilla-400\\" size=\\"x-small\\" icon=\\"file-bar-chart\\"></zicon-stub> <span>Sample report</span></span></div>
      <p class=\\"flex items-center gap-x-4 text-sm\\">
        <metadataitem-stub icon=\\"eye\\">
          1 view
        </metadataitem-stub>
        <metadataitem-stub icon=\\"clock\\">
          Created on Aug 8, 2022
        </metadataitem-stub>
      </p>
    </div>
    <!---->
  </div>
</a>"
`;

exports[`[[ PublicReportCard ]] renders PublicReportCard with all prop options: {"views":1,"hasEditAccess":false,"isRestricted":true} 1`] = `
"<a class=\\"group block rounded-lg border border-slate-400 bg-ink-400 hover:bg-ink-300\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">
  <!---->
  <div class=\\"flex w-full flex-1 flex-wrap\\">
    <div class=\\"space-y-1 border-slate-400 text-sm text-vanilla-400 p-3\\">
      <div class=\\"flex items-center space-x-2 text-base font-semibold text-vanilla-200\\"><span class=\\"mb-2 flex items-center gap-x-2 text-sm font-semibold\\"><zicon-stub color=\\"vanilla-400\\" size=\\"x-small\\" icon=\\"file-lock\\"></zicon-stub> <span>Sample report</span></span></div>
      <p class=\\"flex items-center gap-x-4 text-sm\\">
        <metadataitem-stub icon=\\"eye\\">
          1 view
        </metadataitem-stub>
        <metadataitem-stub icon=\\"clock\\">
          Created on Aug 8, 2022
        </metadataitem-stub>
      </p>
    </div>
    <!---->
  </div>
</a>"
`;

exports[`[[ PublicReportCard ]] renders PublicReportCard with all prop options: {"views":1,"hasEditAccess":true,"isRestricted":false} 1`] = `
"<a class=\\"group block rounded-lg border border-slate-400 bg-ink-400 hover:bg-ink-300\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">
  <!---->
  <div class=\\"flex w-full flex-1 flex-wrap\\">
    <div class=\\"space-y-1 border-slate-400 text-sm text-vanilla-400 w-full md:w-4/5 p-3\\">
      <div class=\\"flex items-center space-x-2 text-base font-semibold text-vanilla-200\\"><span class=\\"mb-2 flex items-center gap-x-2 text-sm font-semibold\\"><zicon-stub color=\\"vanilla-400\\" size=\\"x-small\\" icon=\\"file-bar-chart\\"></zicon-stub> <span>Sample report</span></span></div>
      <p class=\\"flex items-center gap-x-4 text-sm\\">
        <metadataitem-stub icon=\\"eye\\">
          1 view
        </metadataitem-stub>
        <metadataitem-stub icon=\\"clock\\">
          Created on Aug 8, 2022
        </metadataitem-stub>
      </p>
    </div>
    <div class=\\"hidden w-full md:block md:w-1/5 border-slate-400 group-hover:border-slate-400 sm:border-l\\">
      <div class=\\"flex h-full items-center justify-around\\">
        <zbutton-stub icon=\\"edit\\" button-type=\\"ghost\\" icon-color=\\"vanilla-400 opacity-75\\" size=\\"small\\" class=\\"v-popper--has-tooltip\\"></zbutton-stub>
        <zbutton-stub icon=\\"trash-2\\" button-type=\\"ghost\\" icon-color=\\"cherry opacity-75\\" size=\\"small\\" class=\\"v-popper--has-tooltip\\"></zbutton-stub>
      </div>
    </div>
  </div>
</a>"
`;

exports[`[[ PublicReportCard ]] renders PublicReportCard with all prop options: {"views":1,"hasEditAccess":true,"isRestricted":true} 1`] = `
"<a class=\\"group block rounded-lg border border-slate-400 bg-ink-400 hover:bg-ink-300\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">
  <!---->
  <div class=\\"flex w-full flex-1 flex-wrap\\">
    <div class=\\"space-y-1 border-slate-400 text-sm text-vanilla-400 w-full md:w-4/5 p-3\\">
      <div class=\\"flex items-center space-x-2 text-base font-semibold text-vanilla-200\\"><span class=\\"mb-2 flex items-center gap-x-2 text-sm font-semibold\\"><zicon-stub color=\\"vanilla-400\\" size=\\"x-small\\" icon=\\"file-lock\\"></zicon-stub> <span>Sample report</span></span></div>
      <p class=\\"flex items-center gap-x-4 text-sm\\">
        <metadataitem-stub icon=\\"eye\\">
          1 view
        </metadataitem-stub>
        <metadataitem-stub icon=\\"clock\\">
          Created on Aug 8, 2022
        </metadataitem-stub>
      </p>
    </div>
    <div class=\\"hidden w-full md:block md:w-1/5 border-slate-400 group-hover:border-slate-400 sm:border-l\\">
      <div class=\\"flex h-full items-center justify-around\\">
        <zbutton-stub icon=\\"edit\\" button-type=\\"ghost\\" icon-color=\\"vanilla-400 opacity-75\\" size=\\"small\\" class=\\"v-popper--has-tooltip\\"></zbutton-stub>
        <zbutton-stub icon=\\"trash-2\\" button-type=\\"ghost\\" icon-color=\\"cherry opacity-75\\" size=\\"small\\" class=\\"v-popper--has-tooltip\\"></zbutton-stub>
      </div>
    </div>
  </div>
</a>"
`;

exports[`[[ PublicReportCard ]] renders PublicReportCard with all prop options: {"views":45,"hasEditAccess":false,"isRestricted":false} 1`] = `
"<a class=\\"group block rounded-lg border border-slate-400 bg-ink-400 hover:bg-ink-300\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">
  <!---->
  <div class=\\"flex w-full flex-1 flex-wrap\\">
    <div class=\\"space-y-1 border-slate-400 text-sm text-vanilla-400 p-3\\">
      <div class=\\"flex items-center space-x-2 text-base font-semibold text-vanilla-200\\"><span class=\\"mb-2 flex items-center gap-x-2 text-sm font-semibold\\"><zicon-stub color=\\"vanilla-400\\" size=\\"x-small\\" icon=\\"file-bar-chart\\"></zicon-stub> <span>Sample report</span></span></div>
      <p class=\\"flex items-center gap-x-4 text-sm\\">
        <metadataitem-stub icon=\\"eye\\">
          45 views
        </metadataitem-stub>
        <metadataitem-stub icon=\\"clock\\">
          Created on Aug 8, 2022
        </metadataitem-stub>
      </p>
    </div>
    <!---->
  </div>
</a>"
`;

exports[`[[ PublicReportCard ]] renders PublicReportCard with all prop options: {"views":45,"hasEditAccess":false,"isRestricted":true} 1`] = `
"<a class=\\"group block rounded-lg border border-slate-400 bg-ink-400 hover:bg-ink-300\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">
  <!---->
  <div class=\\"flex w-full flex-1 flex-wrap\\">
    <div class=\\"space-y-1 border-slate-400 text-sm text-vanilla-400 p-3\\">
      <div class=\\"flex items-center space-x-2 text-base font-semibold text-vanilla-200\\"><span class=\\"mb-2 flex items-center gap-x-2 text-sm font-semibold\\"><zicon-stub color=\\"vanilla-400\\" size=\\"x-small\\" icon=\\"file-lock\\"></zicon-stub> <span>Sample report</span></span></div>
      <p class=\\"flex items-center gap-x-4 text-sm\\">
        <metadataitem-stub icon=\\"eye\\">
          45 views
        </metadataitem-stub>
        <metadataitem-stub icon=\\"clock\\">
          Created on Aug 8, 2022
        </metadataitem-stub>
      </p>
    </div>
    <!---->
  </div>
</a>"
`;

exports[`[[ PublicReportCard ]] renders PublicReportCard with all prop options: {"views":45,"hasEditAccess":true,"isRestricted":false} 1`] = `
"<a class=\\"group block rounded-lg border border-slate-400 bg-ink-400 hover:bg-ink-300\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">
  <!---->
  <div class=\\"flex w-full flex-1 flex-wrap\\">
    <div class=\\"space-y-1 border-slate-400 text-sm text-vanilla-400 w-full md:w-4/5 p-3\\">
      <div class=\\"flex items-center space-x-2 text-base font-semibold text-vanilla-200\\"><span class=\\"mb-2 flex items-center gap-x-2 text-sm font-semibold\\"><zicon-stub color=\\"vanilla-400\\" size=\\"x-small\\" icon=\\"file-bar-chart\\"></zicon-stub> <span>Sample report</span></span></div>
      <p class=\\"flex items-center gap-x-4 text-sm\\">
        <metadataitem-stub icon=\\"eye\\">
          45 views
        </metadataitem-stub>
        <metadataitem-stub icon=\\"clock\\">
          Created on Aug 8, 2022
        </metadataitem-stub>
      </p>
    </div>
    <div class=\\"hidden w-full md:block md:w-1/5 border-slate-400 group-hover:border-slate-400 sm:border-l\\">
      <div class=\\"flex h-full items-center justify-around\\">
        <zbutton-stub icon=\\"edit\\" button-type=\\"ghost\\" icon-color=\\"vanilla-400 opacity-75\\" size=\\"small\\" class=\\"v-popper--has-tooltip\\"></zbutton-stub>
        <zbutton-stub icon=\\"trash-2\\" button-type=\\"ghost\\" icon-color=\\"cherry opacity-75\\" size=\\"small\\" class=\\"v-popper--has-tooltip\\"></zbutton-stub>
      </div>
    </div>
  </div>
</a>"
`;

exports[`[[ PublicReportCard ]] renders PublicReportCard with all prop options: {"views":45,"hasEditAccess":true,"isRestricted":true} 1`] = `
"<a class=\\"group block rounded-lg border border-slate-400 bg-ink-400 hover:bg-ink-300\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">
  <!---->
  <div class=\\"flex w-full flex-1 flex-wrap\\">
    <div class=\\"space-y-1 border-slate-400 text-sm text-vanilla-400 w-full md:w-4/5 p-3\\">
      <div class=\\"flex items-center space-x-2 text-base font-semibold text-vanilla-200\\"><span class=\\"mb-2 flex items-center gap-x-2 text-sm font-semibold\\"><zicon-stub color=\\"vanilla-400\\" size=\\"x-small\\" icon=\\"file-lock\\"></zicon-stub> <span>Sample report</span></span></div>
      <p class=\\"flex items-center gap-x-4 text-sm\\">
        <metadataitem-stub icon=\\"eye\\">
          45 views
        </metadataitem-stub>
        <metadataitem-stub icon=\\"clock\\">
          Created on Aug 8, 2022
        </metadataitem-stub>
      </p>
    </div>
    <div class=\\"hidden w-full md:block md:w-1/5 border-slate-400 group-hover:border-slate-400 sm:border-l\\">
      <div class=\\"flex h-full items-center justify-around\\">
        <zbutton-stub icon=\\"edit\\" button-type=\\"ghost\\" icon-color=\\"vanilla-400 opacity-75\\" size=\\"small\\" class=\\"v-popper--has-tooltip\\"></zbutton-stub>
        <zbutton-stub icon=\\"trash-2\\" button-type=\\"ghost\\" icon-color=\\"cherry opacity-75\\" size=\\"small\\" class=\\"v-popper--has-tooltip\\"></zbutton-stub>
      </div>
    </div>
  </div>
</a>"
`;
